# KYS_CAPD

2_wheel_robot/: CMakeLists.txt  package.xml
2_wheel_robot/config/: controller.yaml
2_wheel_robot/includes/: header.hpp  ysController.hpp  ysOdom.hpp  ysRos.hpp  ysState.hpp
2_wheel_robot/launch/: 2wheel.launch.py  two_wheel.launch.py
2_wheel_robot/model/: wheel_robot.urdf
2_wheel_robot/rviz/: wheel_robot.rviz
2_wheel_robot/src/: main.cpp  ysController.cpp  ysOdom.cpp  ysRos.cpp
2_wheel_robot/worlds/: astar_mapping_test.world
mapping_test/: CMakeLists.txt  package.xml
mapping_test/src/: main.cpp
test/: main.cpp
test/data/: astar_map_path_ratio_0.050000.csv  astar_map_path_ratio_0.100000.csv  astar_map_path_ratio_0.150000.csv  astar_map_path_ratio_0.200000.csv  astar_map_path_ratio_0.250000.csv  astar_map_path_ratio_0.300000.csv  astar_map_path_ratio_0.350000.csv  astar_map_path_ratio_0.400000.csv  astar_perf.csv  astar_ratio_0.050000.ppm  astar_ratio_0.100000.ppm  astar_ratio_0.150000.ppm  astar_ratio_0.200000.ppm  astar_ratio_0.250000.ppm  astar_ratio_0.300000.ppm  astar_ratio_0.350000.ppm  astar_ratio_0.400000.ppm
ui_ads_ver/: CMakeLists.txt  README.md
ui_ads_ver/includes/ui_ads_ver/: ads_state_ui.hpp
ui_ads_ver/src/: ads_state_ui_app.cpp  ads_state_ui_common.cpp  ads_state_ui_internal.hpp  ads_state_ui_mujoco.cpp  ads_state_ui_node.cpp  ads_state_ui_theme.cpp
